<resources>
    <string name="app_name">RailwayTickets</string>

    <string name="login_label">Login</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="login_btn_title">Login</string>
    <string name="register_btn_title">Register</string>

    <string name="register_label">Register</string>
    <string name="register_login_hint">Login</string>
    <string name="register_password_hint">Password</string>
    <string name="register_confirm_password_hint">Confirm password</string>
    <string name="register_terms">I accept the offer contract and consent to the use of personal data</string>
    <string name="register_button_title">Register</string>

    <string name="find_route_from">From</string>
    <string name="find_route_to">To</string>
    <string name="find_route_date">Date</string>
    <string name="find_route_time">Time</string>
    <string name="find_route_next">next</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_profile">Profile</string>
    <string name="nav_tickets">My tickets</string>
    <string name="nav_buy_ticket">Buy ticket</string>
    <string name="nav_return_ticket">Return ticket</string>
    <string name="nav_help">Help</string>
    <string name="nav_settings">Settings</string>

    <string name="profile_hint_first_name">First name</string>
    <string name="profile_hint_last_name">Last name</string>
    <string name="profile_hint_phone">Phone</string>
    <string name="profile_hint_email">Email</string>
    <string name="profile_hint_doc_type">Document type</string>
    <string name="profile_hint_doc_number">Document number</string>
    <string name="profile_btn_save">Save</string>

    <string name="tickets_from">From: %s</string>
    <string name="tickets_to">To: %s</string>
    <string name="tickets_departure">Departure: %s</string>
    <string name="tickets_carriage">Carriage: %s</string>
    <string name="tickets_seat">Seat: %s</string>
    <string name="tickets_type">Type: %s</string>
    <string name="request_return">Request return</string>

    <string-array name="faq">
        <item>one</item>
        <item>two</item>
        <item>three</item>
    </string-array>
    <string-array name="entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>
