<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_nav_profile_24dp"
        android:title="@string/nav_profile" />
    <item
        android:id="@+id/nav_tickets"
        android:icon="@drawable/ic_nav_tickets_24dp"
        android:title="@string/nav_tickets" />
    <item
        android:id="@+id/nav_buy_ticket"
        android:icon="@drawable/ic_buy_ticket_24dp"
        android:title="@string/nav_buy_ticket" />
    <item
        android:id="@+id/nav_return_ticket"
        android:icon="@drawable/ic_return_ticket_24dp"
        android:title="@string/nav_return_ticket" />
    <item
        android:id="@+id/nav_help"
        android:icon="@drawable/ic_help_24dp"
        android:title="@string/nav_help" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_24dp"
        android:title="@string/nav_settings" />
</menu>
